part2/e2_e4/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-ns
  name: p2e4-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2e4-backend
  template:
    metadata:
      labels:
        app: p2e4-backend
    spec:
      volumes:
        - name: shared
          persistentVolumeClaim:
              claimName: app-claim
      containers:
        - name: p2e4-back-cont
          image: mcfizh/dwk-part1:p2e4-backend
          volumeMounts:
            - name: shared
              mountPath: /shared
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-ns
  name: p2e4-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2e4-frontend
  template:
    metadata:
      labels:
        app: p2e4-frontend
    spec:
      containers:
        - name: p2e4-front-cont
          image: mcfizh/dwk-part1:p2e4-frontend
